# amazon-kinesis-video-streams-producer-embedded-c

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: cmake.yml  kvsappcli.yaml
CMake/: libaziotsharedutil.cmake  libembedded-media.cmake  libfdkaac.cmake  libgtest.cmake  libllhttp.cmake  libmbedtls.cmake  libparson.cmake  libtlsf.cmake  libv4l2capturer.cmake  libwebrtc.cmake
app/: CMakeLists.txt
app/aac-encoder/: CMakeLists.txt
app/aac-encoder/include/aac_encoder/: aac_encoder.h
app/aac-encoder/source/: aac_encoder.c
app/frame-ring-buffer/: CMakeLists.txt
app/frame-ring-buffer/include/frame_ring_buffer/: frame_ring_buffer.h
app/frame-ring-buffer/source/: frame_ring_buffer.c
app/kvsapp/: CMakeLists.txt
app/kvsapp/include/kvs/: kvsapp.h  kvsapp_options.h
app/kvsapp/source/: kvsapp.c
doc/: http_parser_adapter.md  kvs_error_code.md  porting_aac_encoder.md
examples/kvs_audio_video_linux/: CMakeLists.txt  example_config.h  kvs_audio_video_linux.c
examples/kvs_video_only_esp32/: CMakeLists.txt  sdkconfig
examples/kvs_video_only_esp32/components/corehttp/: CMakeLists.txt
examples/kvs_video_only_esp32/components/kvs-producer-rtos/: CMakeLists.txt
examples/kvs_video_only_esp32/main/: CMakeLists.txt  aws_main.c  example_config.h  kvs_video_only_esp32.c  kvs_video_only_esp32.h
examples/kvs_video_only_linux/: CMakeLists.txt  example_config.h  kvs_video_only_linux.c
patch/: 0001-coreHTTP.patch
patches/amazon-kinesis-video-streams-media-interface/: const-fix.patch
res/media/aac_raw/: audio-001.aac  audio-002.aac  audio-006.aac  audio-007.aac  audio-008.aac  audio-009.aac  audio-010.aac  audio-011.aac  audio-012.aac  audio-013.aac  audio-014.aac  audio-015.aac  audio-016.aac  audio-017.aac  audio-018.aac  audio-019.aac  audio-020.aac  audio-021.aac  audio-022.aac  audio-023.aac  audio-024.aac  audio-025.aac  audio-026.aac  audio-027.aac  audio-028.aac  audio-029.aac  audio-030.aac  audio-031.aac  audio-032.aac  audio-033.aac  audio-034.aac  audio-035.aac  audio-036.aac  audio-037.aac  audio-038.aac  audio-039.aac  audio-040.aac  audio-041.aac  audio-042.aac  audio-043.aac  (+282 more)
res/media/g711_alaw/: audio-004.alaw  audio-005.alaw  audio-006.alaw  audio-007.alaw  audio-008.alaw  audio-009.alaw  audio-010.alaw  audio-011.alaw  audio-012.alaw  audio-013.alaw  audio-014.alaw  audio-015.alaw  audio-016.alaw  audio-017.alaw  audio-018.alaw  audio-019.alaw  audio-020.alaw  audio-021.alaw  audio-022.alaw  audio-023.alaw  audio-024.alaw  audio-025.alaw  audio-026.alaw  audio-027.alaw  audio-028.alaw  audio-029.alaw  audio-030.alaw  audio-031.alaw  audio-032.alaw  audio-033.alaw  audio-034.alaw  audio-035.alaw  audio-036.alaw  audio-037.alaw  audio-038.alaw  audio-039.alaw  audio-040.alaw  audio-041.alaw  audio-042.alaw  audio-043.alaw  (+282 more)
samples/: CMakeLists.txt
samples/common/: CMakeLists.txt  aac_file_loader.c  aac_file_loader.h  file_input_stream.c  file_input_stream.h  file_io.c  file_io.h  file_loader.h  g711_file_loader.c  g711_file_loader.h  h264_file_loader.c  h264_file_loader.h
samples/kvs-amebapro/: README.md  example_kvs_producer.c  example_kvs_producer.h  kvs_producer.c  kvs_producer.h  sample_config.h
samples/kvs-esp32/: CMakeLists.txt  README.md  sdkconfig
samples/kvs-esp32/components/c-utility/: CMakeLists.txt
samples/kvs-esp32/components/kvs-embedded-c/: CMakeLists.txt
samples/kvs-esp32/components/llhttp/: CMakeLists.txt
samples/kvs-esp32/components/parson/: CMakeLists.txt
samples/kvs-esp32/components/samples-common/: CMakeLists.txt
samples/kvs-esp32/main/: CMakeLists.txt  Kconfig.projbuild  aws_main.c  kvs_esp32.c  kvs_esp32.h  sample_config.h
samples/kvs-linux/: CMakeLists.txt  kvs_linux.c  sample_config.h
samples/kvs-with-webrtc/: CMakeLists.txt  Common.c  README.md  Samples.h  kvs-with-webrtc.c  kvsWebRTCClientMaster.c  kvs_with_webrtc.c  kvs_with_webrtc.h  kvsappcli.c  mem_wrapper.c  rtp_assembler.c  rtp_assembler.h  sample_config.h
samples/kvsapp/: CMakeLists.txt  README.md  RPi.md  kvsappcli.c  option_configuration.c  sample_config.h  x86-x64.md
samples/kvsapp-ingenic-t31/: CMakeLists.txt  README.md
samples/kvsapp-ingenic-t31/include/: aac_encoder.h  alaw_encoder.h  sample_config.h  t31_audio.h  t31_video.h
samples/kvsapp-ingenic-t31/res/: CMakeLists.txt
samples/kvsapp-ingenic-t31/source/: aac_encoder.c  alaw_encoder.c  kvsappcli.c  mem_wrapper.c  t31_audio.c  t31_video.c
samples/kvsapp-raspberry-pi/: CMakeLists.txt  README.md  kvsappcli-raspberry-pi.c  sample_config.h
samples/mkv_uploader/: CMakeLists.txt  README.md  mkv_update_time.c  mkv_update_time.h  mkv_uploader.c  sample_config.h
src/: CMakeLists.txt
src/include/: iot_credential_provider.h  kvs_errors.h  kvs_options.h  kvs_port.h  kvs_rest_api.h  mkv_generator.h
src/include/kvs/: allocator.h  errors.h  iot_credential_provider.h  kvsapp.h  kvsapp_options.h  mkv_generator.h  mkv_parser.h  nalu.h  pool_allocator.h  port.h  restapi.h  stream.h
src/port/: kvs_port_esp32.c  kvs_port_linux.c  port_amebapro.c  port_esp32.c  port_linux.c
src/source/: allocator.c  aws_signer_v4.c  aws_signer_v4.h  http_helper.c  http_helper.h  iot_credential_provider.c  json_helper.c  json_helper.h  kvs_rest_api.c  logger.h  mkv_generator.c  mkv_parser.c  nalu.c  netio.c  netio.h  network_api.c  network_api.h  pool_allocator.c  restapi.c  sps_decode.c  stream.c
src/source/app/: kvsapp.c
src/source/codec/: nalu.c  sps_decode.c  sps_decode.h
src/source/misc/: json_helper.c
src/source/mkv/: mkv_generator.c
src/source/net/: http_helper.c  http_parser_adapter.h  http_parser_adapter_default.c  http_parser_adapter_llhttp.c  netio.c  netio.h
src/source/os/: allocator.h  endian.h  pool_allocator.c
src/source/restful/: aws_signer_v4.c  aws_signer_v4.h
src/source/restful/iot/: iot_credential_provider.c
src/source/restful/kvs/: restapi_kvs.c
src/source/stream/: stream.c
tests/: CMakeLists.txt  errors_test.cpp  http_parser_adapter_test.cpp  nalu_test.cpp
(+16 files in other folders)
